syntax = "proto3";

package greet;

option go_package = "greet/pkg";


message Person {
    string first_name = 1;
    string last_name = 2;
}
message GreetRequest {
    Person person = 1;
}
message GreetResponse {
    string greeting = 1;
}

message GreetServerStreamRequest {
    Person person = 1;
    int32 number = 2;
}
message GreetServerStreamResponse {
    string greeting = 1;
}

message GreetClientStreamRequest {
    Person person = 1;
}

message GreetClientStreamResponse {
    repeated string greeting = 1;   
}

message GreetClientServerStreamRequest {
    Person person = 1;
}

message GreetClientServerStreamResponse {
    string greeting = 1;
}


service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse);
    rpc GreetServerStream(GreetServerStreamRequest) returns (stream GreetServerStreamResponse);
    rpc GreetClientStream(stream GreetClientStreamRequest) returns (GreetClientStreamResponse);
    rpc GreetClientServerStream(stream GreetClientServerStreamRequest) returns (stream GreetClientServerStreamResponse);
}